--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
                     <div class="sidebar__bottom">
 
-                        <li class="sidebar__item ">
+                        <li class="sidebar__item " style="opacity: 0.7;">
                             <a href="#" class="sidebar__navlink">
                                 <img src="assets/icons/info-circle.svg" alt="Dashboard Icon" class="sidebar__icon">
                                 <span>Help</span>
